project(worker)
cmake_minimum_required(VERSION 2.8)
SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}/../../") 
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_ROOT_PATH}/test/") 
SET(LIBRARY_OUTPUT_PATH "${PROJECT_ROOT_PATH}/build/")

LINK_DIRECTORIES("${PROJECT_ROOT_PATH}/build/")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -DBOOST_LOG_DYN_LINK")
set(CMAKE_BUILD_TYPE Release)

FIND_PACKAGE( Boost 1.50 COMPONENTS system REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
LINK_DIRECTORIES(${Boost_LIBRARY_DIR})

ADD_SUBDIRECTORY(sub)
